--- a/laravel-model-controller/resources/sass/app.scss
+++ b/laravel-model-controller/resources/sass/app.scss
@@ -1,1 +1,71 @@
 //
+body {
+    background-image: url('https://i.pinimg.com/originals/53/d9/e1/53d9e1c210a5966a15c073e51fa808f9.jpg');
+    color: white;
+    font-family: 'Playfair Display', serif;
+
+    header {
+        margin: 25px auto;
+        .logo-container {
+            margin: 0 auto;
+            background-color: yellow;
+            width: 200px;
+            height: 150px;
+            border-radius: 50%;
+            overflow: hidden;
+            img {
+                width: 200px;
+                height: 150px;
+            }
+        }
+        h1 {
+            background-color: black;
+            border-radius: 4px;
+            padding: 3px;
+            width: 550px;
+            margin: 25px auto;
+            color: yellow;
+            font-size: 34px;
+            text-align: center;
+        }
+    }
+
+    main {
+        .container {
+            display: flex;
+            width: 80%;
+            justify-content: space-between;
+            align-items: stretch;
+            margin: 25px auto;
+            .card {
+                width: calc(100% / 3);
+                border: 1px solid yellow;
+                background-color: black;
+                border-radius: 4px;
+                color: white;
+                text-align: center;
+                padding: 8px;
+                opacity: 0.9;
+                h2 {
+                    color: yellow;
+                    text-align: center;
+                }
+                img {
+                    height: 400px;
+                    width: 280px;
+                }
+                h3 {
+                    text-align: center;
+                    color: yellow;
+                }
+                p {
+                    padding: 10px;
+                }
+                &:hover {
+                    cursor: pointer;
+                    opacity: 1;
+                }
+            }
+        }
+    }
+}
